--- a/index.html
+++ b/index.html
@@ -161,6 +161,11 @@
                     <span style="margin-left: 5px"></span>
                     Kuala Lumpur, Malaysia
                 </h5>
+                <h5>
+                    <i class="fa fa-file-o"></i>
+                    <span style="margin-left: 5px"></span>
+                    <a class="transcript-text" href="https://1drv.ms/b/s!AlRtG6sV-c4ag1opP9BpjuDvpqoW">Academic Transcript</a>
+                </h5>
             </div>
             <div class="col-lg-12 text-center">
                 <h3 class="education-text">- SMJK Sam Tet -</h3>
