--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive profile-pic" src="img/profile.jpg" alt="">
+                    <img src="img/profile_pic.JPG" alt="" width="300" height="500">
                     <div class="intro-text">
                         <h1 class="name">Shum Khar Jun</h1>
                         <hr class="star-light">
@@ -193,7 +193,7 @@
                 </div>
             </div>
             <div class="col-lg-12 text-center">
-                <h3>Currently experiencing student life in Brisbane</h3>
+                <h3>Just Graduated from Brisbane</h3>
                 <img style="width: 60%; height: 60%" src="img/KingGeorge.JPG"/>
             </div>
         </div>
